<resources>
    <string name="app_name">Smart Calendar</string>
    <string name="event_name">Event Name</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_date">End Date</string>
    <string name="event_end_time">End Time</string>
    <string name="all_day_check">All Day Event</string>
    <string name="alert_check">Alert</string>
    <string name="traffic_check">Traffic Check</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="desc">Description</string>

    <string name="emptyDate">--/--/----</string>
    <string name="emptyTime">--:--</string>

    <string name="postEventUrl">http://aaa1.hg7a75tmnt.us-west-2.elasticbeanstalk.com/cmpe281BingShi039/rest</string>
    <string name="getEventsUrl">http://aaa1.hg7a75tmnt.us-west-2.elasticbeanstalk.com/cmpe281BingShi039/rest</string>
</resources>
